@@ -1,3 +1,8 @@
+2006-06-20  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>
+
+	PR c++/28052
+	* g++.dg/other/bitfield2.C: New test.
+
 2006-06-20  Zdenek Dvorak <dvorakz@suse.cz>
 
 	PR tree-optimization/27331
